@@ -1,4 +1,5 @@
 -server
+--enable-preview
 -Djava.library.path=/var/presto/plugin/warp-speed
 # The current memory allocation limitation is preventing faster processing, with a minimum requirement of 16G.
 -Xmx16G
